Fix terrible accessibility/readability of centered text
I have just seen this on
https://vote.wikimedia.org/wiki/Special:SecurePoll/vote/1460
The text in the first column is centered. This makes it extremely
hard to read. The table is almost unusable just because of this.

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -94,11 +94,15 @@
 }
 
 .securepoll-ballot-table td {
-	text-align: center;
 	border-left: thin #999 solid;
 	border-right: thin #999 solid;
 	border-bottom: thin #bbb dotted;
 	padding: 0 1.5em;
+}
+
+.securepoll-ballot-table td + td {
+	/* Center the radio buttons, but not the text in the first column */
+	text-align: center;
 }
 
 .securepoll-ballot-row:hover {
